banner part complte

--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Football-lover</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/2b8c4531dc.js" crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <!-- banner section -->
+    <main>
+      <section class="banner-part">
+        <div class="left-part">
+          <h1>
+            The Greatest
+            <br />
+            show on the
+            <br />
+            earth
+          </h1>
+          <p>
+            Contrary to popular belief, Lorem Ipsum is not simply <br> random text.
+            It has roots in a piece of classical Latin literature <br> from 45 BC,
+            making it over 2000 years old.
+          </p>
+          <button>Watch Live  </button>
+        </div>
+        <div class="right-part">
+            <img src="images/Banner Image.png" alt="">
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
