--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Football-lover</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://kit.fontawesome.com/2b8c4531dc.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/2b8c4531dc.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- banner section -->
-    <main>
+   
       <section class="banner-part">
         <div class="left-part">
           <h1>
@@ -20,16 +23,128 @@
             earth
           </h1>
           <p>
-            Contrary to popular belief, Lorem Ipsum is not simply <br> random text.
-            It has roots in a piece of classical Latin literature <br> from 45 BC,
-            making it over 2000 years old.
+            Contrary to popular belief, Lorem Ipsum is not simply
+            <br />
+            random text. It has roots in a piece of classical Latin literature
+            <br />
+            from 45 BC, making it over 2000 years old.
           </p>
-          <button>Watch Live  </button>
+          <button>Watch Live</button>
         </div>
         <div class="right-part">
-            <img src="images/Banner Image.png" alt="">
+          <img src="images/Banner Image.png" alt="" />
         </div>
       </section>
-    </main>
+
+      <!-- live show part -->
+      <section class="live-show-part">
+        <div class="short-button">
+          <a href="">UpComing Match</a>
+          <a href="">All Group</a>
+          <a href="">Blog</a>
+        </div>
+
+         <div class="blog-right">
+
+          <div class="blog-part"> 
+         <div>
+            <img src="images/Blog Image.png" alt="" />
+          <button>Transfer</button>
+          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          <div>
+            <div class="logo-part">
+              <img src="images/Time Icon.png" alt="" />
+              <h5>10hr</h5>
+              <img src="images/Chat Icon.png" alt="" />
+              <h5>23</h5>
+            </div>
+          </div>
+         </div>
+        </div>
+
+          <div class="blog-part"> 
+         <div>
+            <img src="images/Blog Image.png" alt="" />
+          <button>Transfer</button>
+          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          <div>
+            <div class="logo-part">
+              <img src="images/Time Icon.png" alt="" />
+              <h5>10hr</h5>
+              <img src="images/Chat Icon.png" alt="" />
+              <h5>23</h5>
+            </div>
+          </div>
+         </div>
+        </div>
+
+          <div class="blog-part"> 
+         <div>
+            <img src="images/Blog Image.png" alt="" />
+          <button>Transfer</button>
+          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          <div>
+            <div class="logo-part">
+              <img src="images/Time Icon.png" alt="" />
+              <h5>10hr</h5>
+              <img src="images/Chat Icon.png" alt="" />
+              <h5>23</h5>
+            </div>
+          </div>
+         </div>
+        </div>
+
+          <div class="blog-part"> 
+         <div>
+            <img src="images/Blog Image.png" alt="" />
+          <button>Transfer</button>
+          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          <div>
+            <div class="logo-part">
+              <img src="images/Time Icon.png" alt="" />
+              <h5>10hr</h5>
+              <img src="images/Chat Icon.png" alt="" />
+              <h5>23</h5>
+            </div>
+          </div>
+         </div>
+        </div>
+
+          <div class="blog-part"> 
+         <div>
+            <img src="images/Blog Image.png" alt="" />
+          <button>Transfer</button>
+          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          <div>
+            <div class="logo-part">
+              <img src="images/Time Icon.png" alt="" />
+              <h5>10hr</h5>
+              <img src="images/Chat Icon.png" alt="" />
+              <h5>23</h5>
+            </div>
+          </div>
+         </div>
+        </div>
+
+          <div class="blog-part"> 
+         <div>
+            <img src="images/Blog Image.png" alt="" />
+          <button>Transfer</button>
+          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          <div>
+            <div class="logo-part">
+              <img src="images/Time Icon.png" alt="" />
+              <h5>10hr</h5>
+              <img src="images/Chat Icon.png" alt="" />
+              <h5>23</h5>
+            </div>
+          </div>
+         </div>
+        </div>
+         </div>
+
+
+      </section>
+    
   </body>
 </html>
