--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <!-- live show part -->
       <section class="live-show-part">
         <div class="short-button">
-          <a href="">UpComing Match</a>
+          <a href="second.html">UpComing Match</a>
           <a href="">All Group</a>
           <a href="">Blog</a>
         </div>
@@ -142,9 +142,21 @@
          </div>
         </div>
          </div>
-
-
       </section>
+      <footer>
+        <div>
+          <h1>Goal</h1>
+        </div>
+        <hr>
+        <div class="footer-part">
+          <h4>Contact Us </h4>
+          <h4>Terms of Service </h4>
+          <h4>Privacy Policy </h4>
+          <h4>Privacy Settings</h4>
+          <h4>Goal App</h4>
+          <h4>Goal Live</h4>
+        </div>
+      </footer>
     
   </body>
 </html>
